# Aurum-Engine

./: .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  security.yml  tech_task.yml
.github/workflows/: auto-add-bug-issues.yml
docs/: CONTRIBUTING,md  DEVELOPER_GUIDE.md  FEATURE_SPEC.md  FUTURE_VISION.md  LICENSE.md  NewFile  PROJECT_BRIEF.md  README.md  ROADMAP_AND_TASKS.md  SECURITY.md  TERMS_OF_USE.md
src/Engine/: CMakeLists.txt
src/Engine/include/Engine/: Application.hpp  DebugOverlay.hpp  EngineRuntimeConfig.hpp  Event.hpp  EventDispatcher.hpp  Input.hpp  Renderer.hpp  TimeSystem.hpp  Window.hpp
src/Engine/render/dx12/: D3D12CommandQueue.cpp  D3D12CommandQueue.hpp  D3D12Context.cpp  D3D12Context.hpp  D3D12Swapchain.cpp  D3D12Swapchain.hpp
src/Engine/src/: Application.cpp  DebugOverlay.cpp  EngineRuntimeConfig.cpp  Renderer.cpp  TimeSystem.cpp  Window.cpp
src/Framework/: CMakeLists.txt
src/Framework/include/Framework/: Config.hpp  Logger.hpp  MemoryTracker.hpp  Timer.hpp
src/Framework/include/Framework/Math/: Math.hpp  Matrix4x4.hpp  Quaternion.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Framework/src/: Config.cpp  Logger.cpp  Math.cpp  MemoryTracker.cpp  Timer.cpp
src/Sandbox/: CMakeLists.txt
src/Sandbox/config/: engine_runtime.json
src/Sandbox/src/: main.cpp
